Fix spacing between status indicators.

--- a/app/assets/stylesheets/relaunch/_toolbar.css.scss
+++ b/app/assets/stylesheets/relaunch/_toolbar.css.scss
@@ -198,15 +198,15 @@
     }
 
     &.yes .caret:before {
-      margin-left: -11px;
+      margin-left: -12px;
     }
 
     &.limited .btn:before {
-      margin-left: -4px;
+      margin-left: -5px;
     }
 
     &.no .caret:after {
-      margin-left: 3px;
+      margin-left: 2px;
     }
 
     &.unknown .btn:after {
